examples/datalog/18_advanced_patterns/62_first_last_per_group.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_first_last
Knowledge graph 'test_first_last' created.
Switched to knowledge graph: test_first_last
> .kg use test_first_last
Switched to knowledge graph: test_first_last
> +events[(1, "A", "start"), (2, "A", "middle"), (3, "A", "end"), (1, "B", "only")].
Inserted 4 fact(s) into 'events'.
> first_per_group(Group, <MIN:Id>) :- events(Id, Group, _).
Script error: Parse error: Unknown aggregate function: 
